k8s/base/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-be
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      role: backend
  template:
    metadata:
      labels:
        role: backend
        tier: logic
    spec:
      containers:
        - image: localhost/url-shortener-backend:latest
          name: url-be
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
