k8s/base/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: url-be-service
  namespace: url-shortener
spec:
  selector:
    role: backend
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8080
