k8s/base/backend/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: url-be-deny-all-inbound
  namespace: url-shortener
spec:
  podSelector:
    matchLabels:
      tier: logic
  policyTypes:
    - Ingress
  ingress: []

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: url-be-allow-fe-inbound
  namespace: url-shortener
spec:
  podSelector:
    matchLabels:
      tier: logic
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: web
      ports:
        - protocol: TCP
          port: 8080
